Added new helpers

--- a/TravelApp/DesktopHost/View/Agent/NewTripView.xaml
+++ b/TravelApp/DesktopHost/View/Agent/NewTripView.xaml
@@ -7,6 +7,11 @@
              xmlns:viewmodels="clr-namespace:TravelApp.DesktopHost.ViewModel.Component.Agent"
              xmlns:views="clr-namespace:TravelApp.DesktopHost.View"
              xmlns:local="clr-namespace:TravelApp.DesktopHost.View.Agent"
+             xmlns:l="clr-namespace:TravelApp"
+             Focusable="True"
+             l:HelpProvider.HelpKey="newTrip"
+             GotFocus="SetHelpKey"
+             Loaded="UserControl_Loaded"
              mc:Ignorable="d" 
              Background="White"
              SizeChanged="Window_SizeChanged"
