--- a/TravelApp/DesktopHost/View/Agent/NewAttractionView.xaml
+++ b/TravelApp/DesktopHost/View/Agent/NewAttractionView.xaml
@@ -7,6 +7,11 @@
              xmlns:local="clr-namespace:TravelApp.DesktopHost.View.Agent"
              xmlns:viewmodels="clr-namespace:TravelApp.DesktopHost.ViewModel.Component.Agent"
              xmlns:views="clr-namespace:TravelApp.DesktopHost.View"
+             xmlns:l="clr-namespace:TravelApp"
+             Focusable="True"
+             l:HelpProvider.HelpKey="newAttraction"
+             GotFocus="SetHelpKey"
+             Loaded="UserControl_Loaded"
              mc:Ignorable="d" 
              Background="White"
              SizeChanged="Window_SizeChanged"
