--- a/TravelApp/DesktopHost/View/Client/ClientTripDetailsView.xaml
+++ b/TravelApp/DesktopHost/View/Client/ClientTripDetailsView.xaml
@@ -81,13 +81,15 @@
                         Background="#DFE6F0"
                         BorderBrush="#DFE6F0"
                         Padding="2" 
+                        Command="{Binding NewTrip}"
                         Visibility="{Binding EditVisibility}"
                         Margin="0 0 70 0">
                         <StackPanel Orientation="Horizontal">
                             <Viewbox Width="25" Height="25">
                                 <materialDesign:PackIcon Kind="Pencil" VerticalAlignment="Center" Foreground="Black"/>
                             </Viewbox>
-                            <TextBlock Text="EDIT" 
+                            <TextBlock 
+                                   Text="EDIT" 
                                    FontFamily="Poppins" 
                                    Grid.Column="1" 
                                    Padding="5"  
