--- a/TravelApp/DesktopHost/View/Client/ClientTripDetailsView.xaml
+++ b/TravelApp/DesktopHost/View/Client/ClientTripDetailsView.xaml
@@ -291,7 +291,7 @@
                             <RowDefinition Height="Auto"></RowDefinition>
                         </Grid.RowDefinitions>
                         <Border CornerRadius="5" Grid.Row="0">
-                            <Image Source="../../../Style/Images/trip.png" 
+                            <Image Source="{Binding Trip.Picture}" 
                                    Width="{Binding FieldsWidth}" 
                                    HorizontalAlignment="Left"
                                    Height="auto" 
