--- a/TravelApp/DesktopHost/View/Agent/EditPlaceView.xaml
+++ b/TravelApp/DesktopHost/View/Agent/EditPlaceView.xaml
@@ -7,6 +7,11 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:viewmodels="clr-namespace:TravelApp.DesktopHost.ViewModel"
              xmlns:views="clr-namespace:TravelApp.DesktopHost.View"
+             xmlns:l="clr-namespace:TravelApp"
+             Focusable="True"
+             l:HelpProvider.HelpKey="newPlace"
+             GotFocus="SetHelpKey"
+             Loaded="UserControl_Loaded"
              mc:Ignorable="d" 
              Background="White"
              SizeChanged="Window_SizeChanged">
