--- a/TravelApp/DesktopHost/View/Agent/NewPlaceView.xaml
+++ b/TravelApp/DesktopHost/View/Agent/NewPlaceView.xaml
@@ -206,7 +206,7 @@
                 Margin="0, 22 ,0 ,0"
                 IsEnabled="{Binding IsButtonEnabled}"
                 ToolTip="Click to create the new place"
-                Content="Create"
+                Content="Save"
                 Style="{StaticResource FormButton}"
                 Command="{Binding Create}"
                 IsDefault="True" Cursor="Hand" >
