added shortcuts for cancel button

--- a/TravelApp/DesktopHost/View/Agent/EditPlaceView.xaml
+++ b/TravelApp/DesktopHost/View/Agent/EditPlaceView.xaml
@@ -73,8 +73,12 @@
                     Grid.Row="1"
                     VerticalAlignment="Top"
                     HorizontalAlignment="Left"
+                    x:Name="Cancel"
                     Style="{StaticResource CloseButton}"
                     Cursor="Hand">
+                <Button.InputBindings>
+                    <KeyBinding Key="Escape" Command="{Binding Cancel}" />
+                </Button.InputBindings>
                 <materialDesign:PackIcon Kind="Close" Width="45" Height="45"/>
             </Button>
 
