--- a/TravelApp/DesktopHost/View/Agent/NewAttractionView.xaml
+++ b/TravelApp/DesktopHost/View/Agent/NewAttractionView.xaml
@@ -37,6 +37,7 @@
             </Grid.ColumnDefinitions>
 
             <Button Command="{Binding Cancel}"
+                    x:Name="Cancel"
                     Width="50" Height="50"
                     Grid.Column="2"
                     Grid.Row="1"
@@ -45,6 +46,9 @@
                     HorizontalAlignment="Left"
                     Style="{StaticResource CloseButton}"
                     Cursor="Hand">
+                <Button.InputBindings>
+                    <KeyBinding Key="Escape" Command="{Binding Cancel}" />
+                </Button.InputBindings>
                 <materialDesign:PackIcon Kind="Close" Width="45" Height="45"/>
             </Button>
 
