implemented shortcuts for agent navigation

--- a/TravelApp/DesktopHost/View/Navigation/AgentNavigationView.xaml
+++ b/TravelApp/DesktopHost/View/Navigation/AgentNavigationView.xaml
@@ -17,7 +17,7 @@
               GotFocus="SetHelpKey">
 
 
-        <TabControl Name="navigation"
+    <TabControl Name="navigation"  PreviewKeyDown="TabControl_PreviewKeyDown"
                 materialDesign:NavigationRailAssist.ShowSelectionBackground="True"
                 SnapsToDevicePixels="True"
                 Style="{StaticResource MaterialDesignNavigationRailTabControl}"
