Implemented undo for deleting places

--- a/TravelApp/DesktopHost/View/Agent/AgentStayEatView.xaml
+++ b/TravelApp/DesktopHost/View/Agent/AgentStayEatView.xaml
@@ -16,6 +16,10 @@
              GotFocus="SetHelpKey"
              Loaded="UserControl_Loaded">
 
+    <UserControl.InputBindings>
+        <KeyBinding Key="Z" Modifiers="Control" Command="{Binding Undo}" />
+    </UserControl.InputBindings>
+
     <Grid>
         <Grid>
             <Grid.RowDefinitions>
@@ -105,7 +109,8 @@
             </Grid>
 
             <materialDesign:Card Grid.Row="2" Background="White" Padding="16" HorizontalAlignment="Center">
-                <DataGrid x:Name="MyDataGrid" ItemsSource="{Binding FilteredItems}"
+                <DataGrid x:Name="MyDataGrid" ItemsSource="{Binding FilteredItems}" SelectedItem="{Binding SelectedItem}"
+                          LostFocus="YourTable_LostFocus"
                           Width="{Binding TableWidth}"
                           RowHeight="55"
                           HorizontalAlignment="Center"
