--- a/TravelApp/DesktopHost/View/Client/ClientTripDetailsView.xaml
+++ b/TravelApp/DesktopHost/View/Client/ClientTripDetailsView.xaml
@@ -559,6 +559,7 @@
                                                 <RowDefinition Height="120"/>
                                                 <RowDefinition Height="Auto"/>
                                                 <RowDefinition Height="Auto"/>
+                                                <RowDefinition Height="Auto"/>
                                             </Grid.RowDefinitions>
 
                                             <Border CornerRadius="5">
@@ -578,22 +579,35 @@
                                                     VerticalAlignment="Center"
                                                     Width="300"
                                                     Grid.Row="1"
-                                                    Margin="38 20 10 20"
+                                                    Margin="20 20 10 20"
                                                     Foreground="Black"
                                                     FontSize="30"
                                                     FontWeight="DemiBold"
                                                     />
                                             </ScrollViewer>
+                                            <ScrollViewer Grid.Row="2" Height="32" VerticalScrollBarVisibility="Auto">
+                                                <TextBlock
+                                                    Text="{Binding Address}"
+                                                    TextWrapping="Wrap"
+                                                    Width="300"
+                                                    Height="30"
+                                                    Grid.Row="2"
+                                                    Margin="0 0 0 0"
+                                                    Foreground="Black"
+                                                    FontSize="18"
+                                                    FontWeight="DemiBold"
+                                                    />
+                                            </ScrollViewer>
                                             <ScrollViewer VerticalScrollBarVisibility="Auto"
-                                                Grid.Row="2"
+                                                Grid.Row="3"
                                                 Height="130"
                                                           Margin="0 0 0 40">
                                                 <TextBlock
                                                     Text="{ Binding Description }"
                                                     Width="300"
                                                     TextWrapping="Wrap"
-                                                    Grid.Row="2"
-                                                    Margin="20 0 20 0"
+                                                    Grid.Row="3"
+                                                    Margin="35 0 20 0"
                                                     FontSize="17"
                                                     Foreground="#545454"
                                                     LineHeight="32"
