--- a/TravelApp/DesktopHost/View/Agent/AgentAttractionsView.xaml
+++ b/TravelApp/DesktopHost/View/Agent/AgentAttractionsView.xaml
@@ -197,22 +197,24 @@
                                         FontWeight="DemiBold"
                                         />
                                     </ScrollViewer>
-                                    <ScrollViewer Grid.Row="2" Height="32" VerticalScrollBarVisibility="Auto">
+                                    <ScrollViewer Grid.Row="2" Height="38" VerticalScrollBarVisibility="Auto">
                                         <TextBlock
                                         Text="{Binding Address}"
                                         TextWrapping="Wrap"
                                         Width="300"
-                                        Height="30"
+                                        
                                         Grid.Row="2"
                                         Margin="0 0 0 0"
                                         Foreground="Black"
                                         FontSize="18"
                                         FontWeight="DemiBold"
+                                        
                                         />
                                     </ScrollViewer>
                                     <ScrollViewer VerticalScrollBarVisibility="Auto"
                                                   Grid.Row="3"
-                                                  Height="130">
+                                                  Height="130"
+                                                  Margin="0 10 0 0">
                                         <TextBlock
                                             Text="{ Binding Description }"
                                             Width="300"
